unpackaged/main/default/objects/narvar__Narvar_OAuth_Settings__mdt/narvar__Narvar_OAuth_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Stores all oAuth settings necessary by the application.</description>
    <label>Narvar OAuth Setting</label>
    <pluralLabel>Narvar OAuth Settings</pluralLabel>
</CustomObject>