unpackaged/main/default/objects/narvar__Narvar_OAuth_Settings__mdt/fields/narvar__Client_ID__c.field-meta.xml
<CustomField>
    <fullName>narvar__Client_ID__c</fullName>
    <description>Unique identifier used for OAuth token exchange. Narvar uses this to grant access to their Narvar Customer Service Platform API</description>
    <inlineHelpText>This needs to match the Consumer Key in the Connected App named, Narvar Customer Service Platform API</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>