unpackaged/main/default/objects/narvar__Narvar_OAuth_Settings__mdt/fields/narvar__Connected_App_Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>narvar__Connected_App_Callback_URL__c</fullName>
    <description>The callback URL used by Narvar to authorize their Narvar Customer Service Platform API</description>
    <inlineHelpText>This value needs to match the Callback URL field in the connected app named, Narvar Customer Service Platform API</inlineHelpText>
    <label>Connected App Callback URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>