unpackaged/main/default/objects/narvar__Narvar_OAuth_Settings__mdt/fields/narvar__Connected_App_Name__c.field-meta.xml
<CustomField>
    <fullName>narvar__Connected_App_Name__c</fullName>
    <description>Name of the Salesforce Connected App needed to authenticate the Narvar Customer Service Platform API</description>
    <label>Connected App Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>